--- a/BuyTogether/FeedDescriptionTableViewCell.xib
+++ b/BuyTogether/FeedDescriptionTableViewCell.xib
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <string key="text">Jenny wants a Kate Spade stripe dresss for a long time. Her birthday is in less than a week. I want to find couple friends to splite the cost. I believe the gift will make her super happy. Let's do it!!!</string>
-                        <color key="textColor" red="0.086274512110000007" green="0.74117648599999997" blue="0.15686275059999999" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
