--- a/BuyTogether/FeedContributionStatusTableViewCell.xib
+++ b/BuyTogether/FeedContributionStatusTableViewCell.xib
@@ -13,8 +13,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your Contribution" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVo-0X-h5T">
-                        <rect key="frame" x="154" y="19" width="146" height="20"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your Contribution" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVo-0X-h5T">
+                        <rect key="frame" x="126" y="19" width="185" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.086274512110000007" green="0.74117648599999997" blue="0.15686275059999999" alpha="1" colorSpace="deviceRGB"/>
@@ -62,7 +62,9 @@
             <connections>
                 <outlet property="contributedAmount" destination="2cF-p1-KDn" id="1YV-rO-csq"/>
                 <outlet property="contribution" destination="3SF-l0-Ysa" id="DuG-HQ-Ep7"/>
+                <outlet property="dollarLabel" destination="QR5-nj-DSg" id="EGc-zB-XHB"/>
                 <outlet property="minimalContribution" destination="P6h-4Q-cLZ" id="Hav-by-pXR"/>
+                <outlet property="roleContributionLabel" destination="PVo-0X-h5T" id="DMZ-oE-bN3"/>
                 <outlet property="totalContribution" destination="RzG-ss-YHs" id="b1s-yL-cqC"/>
             </connections>
         </tableViewCell>
